fix(cart sidebar): fixed minor layout issues and added empty cart message

--- a/src/components/CartSideBar/styles.css
+++ b/src/components/CartSideBar/styles.css
@@ -79,4 +79,8 @@
   .cartsidebar__checkout-btn:active {
     @apply bg-green-600 !important;
   }
+
+  .cartsidebar__empty {
+    @apply text-center text-sm sm:text-base md:text-lg;
+  }
 }
